src/ui/tests/snapshots/eks__ui__tests__golden__the_overview_of_a_cluster_with_no_nodes.snap
---
source: src/ui/tests/golden.rs
expression: "text(&frame(&app, WIDTH, HEIGHT))"
---
 eks │ beta (us-east-1)
┌ Clusters ────────────────────┐┌ Overview ────────────────────────────────────────────────────────┐
│  alpha us-east-1             ││Context   arn:aws:eks:us-east-1:1234:cluster/beta                 │
│● beta us-east-1              ││Namespace default                                                 │
│  gamma us-east-1             ││Region    us-east-1                                               │
│                              ││Account   1234                                                    │
│                              ││                                                                  │
│                              ││This cluster has no nodes.                                        │
│                              ││                                                                  │
│                              ││                                                                  │
│                              ││                                                                  │
│                              ││                                                                  │
│                              ││                                                                  │
│                              ││                                                                  │
│                              ││                                                                  │
│                              ││                                                                  │
│                              ││                                                                  │
│                              ││                                                                  │
│                              ││                                                                  │
│                              ││                                                                  │
│                              ││                                                                  │
│                              ││                                                                  │
└──────────────────────────────┘└──────────────────────────────────────────────────────────────────┘
 tab/→ switch/drill   j/k move   C audit log   ←/esc back   r refresh   s/S sort   q quit   / filter
