src/ui/tests/snapshots/eks__ui__tests__golden__the_overview_on_a_terminal_too_small_to_hold_it.snap
---
source: src/ui/tests/golden.rs
expression: "text(&frame(&overview(), 30, 6))"
---
 eks │ beta (us-east-1)
┌ Cluster┐┌ Overview ────────┐
│  alpha ││Context   arn:aws:│
│● beta u││Namespace default │
└────────┘└──────────────────┘
 tab/→ switch/drill   j/k move
