src/ui/tests/snapshots/eks__ui__tests__golden__the_overview_when_the_cluster_rejects_the_credentials.snap
---
source: src/ui/tests/golden.rs
expression: "text(&frame(&app, WIDTH, HEIGHT))"
---
 eks │ beta (us-east-1)
┌ Clusters ────────────────────┐┌ Overview ────────────────────────────────────────────────────────┐
│  alpha us-east-1             ││Context   arn:aws:eks:us-east-1:1234:cluster/beta                 │
│● beta us-east-1              ││Namespace default                                                 │
│  gamma us-east-1             ││Region    us-east-1                                               │
│                              ││Account   1234                                                    │
│                              ││                                                                  │
│                              ││beta rejected your credentials (401 Unauthorized). Your AWS       │
│                              ││session has probably expired.                                     │
│                              ││Press L to sign in again and retry.                               │
│                              ││                                                                  │
│                              ││                                                                  │
│                              ││                                                                  │
│                              ││                                                                  │
│                              ││                                                                  │
│                              ││                                                                  │
│                              ││                                                                  │
│                              ││                                                                  │
│                              ││                                                                  │
│                              ││                                                                  │
│                              ││                                                                  │
│                              ││                                                                  │
└──────────────────────────────┘└──────────────────────────────────────────────────────────────────┘
 L log in   tab/→ switch   ←/esc back   r refresh   q quit
